# DSAproject

./: README.md
DSA_PROJECT_FINAL/FileZip_DSA_Project/: BUILD.bat  BUILD.sh  CMakeLists.txt  README.md
DSA_PROJECT_FINAL/FileZip_DSA_Project/docs/: HOW_TO_RUN.txt
DSA_PROJECT_FINAL/FileZip_DSA_Project/include/: huffman.h  lzw.h  rle.h
DSA_PROJECT_FINAL/FileZip_DSA_Project/src/: huffman.cpp  lzw.cpp  main_cli.cpp  rle.cpp  server.cpp
DSA_PROJECT_FINAL/FileZip_DSA_Project/web/: index.html
